<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/filter_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/filter_all"
                    android:checked="true"
                    android:title="@string/filter_all" />
                <item
                    android:id="@+id/filter_successful"
                    android:title="@string/filter_successful_launches" />
                <item
                    android:id="@+id/filter_unsuccessful"
                    android:title="@string/filter_unsuccessful_launches" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_launch_date"
                    android:checked="true"
                    android:title="@string/sort_launch_date" />
                <item
                    android:id="@+id/sort_mission_name"
                    android:title="@string/sort_mission_name" />
            </group>
        </menu>
    </item>
</menu>